--- a/projects.json
+++ b/projects.json
@@ -90,7 +90,7 @@
     "imagePath": "/fannilestar/images/project-images/booki/booki1.jpg",
     "title": "Booki",
     "descriptionShort": {
-      "fr": "Un site de réservation d'hébergements responsive offrant une mise en page épurée et un contenu bien organisé",
+      "fr": "Un site de réservation d'hébergements responsive avec une mise en page épurée et un contenu bien organisé",
       "en": "A user-friendly, responsive accommodation booking website with a clean layout and well-structured content"
     },
     "descriptionLong": {
