--- a/projects.json
+++ b/projects.json
@@ -55,8 +55,8 @@
 
       ]
     },
-    "githubLink": "https://github.com/voidermalie/kanap-front",
-    "liveDemo": "https://kanap-front-eta.vercel.app/"
+    "githubLink": "https://github.com/voidermalie/kanap_selfcontained",
+    "liveDemo": "https://voidermalie.github.io/kanap_selfcontained"
   },
   {
     "id": "p3",
@@ -138,8 +138,8 @@
         {"id": "p5_en_6", "text": "Fortified security by leveraging bcrypt for password hashing, jsonwebtoken for token management, helmet for HTTP security, and dotenv for environment variable management"}
       ]
     },
-    "githubLink": "https://github.com/voidermalie/hottakes-back",
-    "liveDemo": "https://hottakes-front.vercel.app/"
+    "githubLink": "https://github.com/voidermalie/piiquante",
+    "videoDemo": "https://vimeo.com/manage/videos/854993756"
   },
   {
     "id": "p6",
